# OOP_indie_studio_2018

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  tests_run
.github/: main.workflow
Components/include/: Chrono.hpp
Components/src/: Chrono.cpp
ECS/include/Abstracts/: AComponent.hpp
ECS/include/Interfaces/: IComponent.hpp
ECS/src/Abstracts/: AComponent.cpp
Engine/include/: AScene.hpp  GameApplication.hpp  IrrLichtContext.hpp  irrlicht.hpp
Engine/include/Abstracts/: AScene.hpp  ASerializable.hpp
Engine/include/ECS/: Engine.hpp  Manager.hpp
Engine/include/ECS/Abstracts/: AComponent.hpp  AEntity.hpp  ASystem.hpp
Engine/include/ECS/Abstracts/Systems/: AEvent.hpp  AInput.hpp
Engine/include/ECS/Components/: Button.hpp  Chrono.hpp  Image.hpp  Model3D.hpp  Particle.hpp  Player.hpp  Renderer.hpp  Slider.hpp  Text.hpp  Timer.hpp
Engine/include/ECS/Components/Powerups/: APowerUp.hpp  BombUp.hpp  FireUp.hpp  SpeedUp.hpp  WallPass.hpp
Engine/include/ECS/Entities/: AEntity.hpp  Button.hpp  Image.hpp  Particle.hpp  Slider.hpp  Text.hpp
Engine/include/ECS/Interfaces/: IComponent.hpp  IEntity.hpp  ISystem.hpp  InputType.hpp
Engine/include/ECS/Interfaces/Entities/: IClickable.hpp  IGuiElement.hpp  IHoverable.hpp  IMovable.hpp
Engine/include/ECS/Systems/: ApplyPowerUp.hpp  Audio.hpp  EventHandler.hpp  InputHandler.hpp  JoystickInput.hpp  KeyboardInput.hpp  MouseInput.hpp  Particle.hpp  Renderer.hpp  Timer.hpp
Engine/include/ECS/Systems/Event/: ButtonEvent.hpp
Engine/include/ECS/Systems/Input/: JoystickHandler.hpp  JoystickInput.hpp  KeyboardHandler.hpp  KeyboardInput.hpp  MouseInput.hpp
Engine/include/Effects/: AudioVisualizer.cpp  AudioVisualizer.hpp
Engine/include/Exception/: AException.hpp  Exception.hpp  NotImplementedException.hpp  SerializationException.hpp
Engine/include/Exception/Engine/: EngineException.hpp
Engine/include/Exception/Engine/ECS/: ECSException.hpp
Engine/include/Exception/Engine/ECS/Systems/: SoundException.hpp
Engine/include/Exception/Memory/: MemoryException.hpp
Engine/include/Exception/Permission/: PermissionException.hpp
Engine/include/Math/: Rect.hpp
Engine/include/Math/Vector/: Rect.hpp  Vec2.hpp  Vec3.hpp
Engine/include/Scenes/: AScene.hpp  MainMenu.hpp
Engine/include/Utils/: Color.hpp  Colors.hpp  Logger.hpp  Random.hpp  TypeDisplayer.hpp
Engine/src/: AException.cpp  AScene.cpp  GameApplication.cpp  IrrLichtContext.cpp  Logger.cpp
Engine/src/Abstracts/: AEntity.cpp  AScene.cpp  ASerializable.cpp
Engine/src/ECS/: Engine.cpp  Manager.cpp
Engine/src/ECS/Abstract/: AComponent.cpp  AEntity.cpp  ASystem.cpp
Engine/src/ECS/Components/: Button.cpp  Chrono.cpp  Image.cpp  Model3D.cpp  Renderer.cpp  Slider.cpp  Text.cpp  Timer.cpp
Engine/src/ECS/Components/Powerups/: APowerUp.cpp  BombUp.cpp  FireUp.cpp  SpeedUp.cpp  WallPass.cpp
Engine/src/ECS/Entities/: Button.cpp  IGuiElement.cpp  Image.cpp  Particle.cpp  Slider.cpp  Text.cpp
Engine/src/ECS/Systems/: AEvent.cpp  ApplyPowerUp.cpp  Audio.cpp  EventHandler.cpp  InputHandler.cpp  JoystickInput.cpp  KeyboardInput.cpp  MouseInput.cpp  Particle.cpp  Renderer.cpp  Timer.cpp
Engine/src/ECS/Systems/Event/: ButtonEvent.cpp
Engine/src/ECS/Systems/Input/: AInput.cpp  JoystickHandler.cpp  JoystickInput.cpp  KeyboardHandler.cpp  KeyboardInput.cpp  MouseInput.cpp
Engine/src/Effects/: AudioVisualizer.cpp
Engine/src/Exception/: AException.cpp
Engine/src/Scenes/: AScene.cpp  MainMenu.cpp
Engine/src/Utils/: Color.cpp  Logger.cpp  Random.cpp
Game/include/: Assets.hpp  BombermanApplication.hpp
Game/include/Components/: BombTicker.hpp
Game/include/Entities/: APowerUp.hpp  Block.hpp  Bomb.hpp  BombUp.hpp  Button.hpp  Character.hpp  FireUp.hpp  GhostUp.hpp  Particle.hpp  Player.hpp  PowerUp.hpp  SpeedUp.hpp  SuperBomb.hpp  Text.hpp
Game/include/Entities/Powerups/: BombUp.hpp  FireUp.hpp  GhostUp.hpp  SpeedUp.hpp  SuperBomb.hpp
Game/include/Scenes/: EndGame.hpp  Game.hpp  GameScene.hpp  MainMenu.hpp  OptionsMenu.hpp  PauseMenu.hpp  Selection.hpp
Game/include/Systems/: JoystickHandler.hpp  KeyboardHandler.hpp  Map.hpp  Particle.hpp  PowerUp.hpp
Game/src/: BombermanApplication.cpp  Main.cpp
Game/src/Components/: BombTicker.cpp
Game/src/Entities/: APowerUp.cpp  Block.cpp  Bomb.cpp  BombUp.cpp  Button.cpp  Character.cpp  FireUp.cpp  GhostUp.cpp  Particle.cpp  Player.cpp  PowerUp.cpp  SpeedUp.cpp  SuperBomb.cpp  Text.cpp
Game/src/Entities/Powerups/: APowerUp.cpp  BombUp.cpp  FireUp.cpp  GhostUp.cpp  SpeedUp.cpp  SuperBomb.cpp
Game/src/Scenes/: EndGame.cpp  Game.cpp  GameScene.cpp  MainMenu.cpp  OptionsMenu.cpp  PauseMenu.cpp  Selection.cpp
Game/src/Systems/: InputHandler.cpp  JoystickHandler.cpp  KeyboardHandler.cpp  Map.cpp  Particle.cpp  PowerUp.cpp
Tests/: Criterion.hpp  Test.cpp  TestsRect.cpp  TestsVectors.cpp
Tools/: Makefile  install.sh  unsinstall.sh
actions/linux-engine-compilation/: Dockerfile  entrypoint.sh
assets/models/block/: cube.mtl  powerup.mtl
assets/models/block/WoodenCube/: WoodenCube.mtl
assets/models/particles/: beach-ball.mtl
include/ECS/Abstracts/: AComponent.hpp
include/ECS/Components/: Chrono.hpp
include/ECS/Entities/: AEntity.hpp
include/ECS/Interfaces/: IComponent.hpp  IEntity.hpp
res/models/obj-Burning_Cube_by_3DHaupt/: Burning_Cube_by_3DHaupt-(Wavefront OBJ).mtl
src/ECS/Abstracts/: AComponent.cpp  AEntity.cpp
src/ECS/Components/: Chrono.cpp
